syntax = "proto3";

option go_package = "github.ibm.com/blockchaindb/server/api";

package api;

import "google/protobuf/timestamp.proto";

message GetStatusQueryEnvelope {
  GetStatusQuery payload = 1;
  bytes signature = 2;
}

message GetStatusQuery {
  bytes userID = 1;
  string DBName = 2;
}

message GetStatusResponseEnvelope {
  GetStatusResponse payload = 1;
  bytes signature = 2;

}

message GetStatusResponse {
  ResponseHeader header = 1;
  bool exist = 2;
}

message GetStateQueryEnvelope {
  GetStateQuery payload = 1;
  bytes signature = 2;
}

message GetStateQuery {
  bytes userID = 1;
  string DBName = 2;
  string key = 3;
}

message GetStateResponseEnvelope {
  GetStateResponse payload = 1;
  bytes signature = 2;
}

message GetStateResponse {
  ResponseHeader header = 1;
  Value value = 2;
}

message Value {
  bytes   value = 1;
  Metadata metadata = 2;
}

message Metadata {
  Version version = 1;
}

message Version {
  uint64 block_num = 1;
  uint64 tx_num = 2;
}

message Digest {
  // Ledger merkle tree root
  bytes root_hash = 1;
  // Ledger height
  uint64 height = 2;
}

message User {
  bytes userID = 1;
  bytes user_certificate = 2;
  repeated string roles = 3;
}

message Node {
  bytes nodeID = 1;
  bytes node_certificate = 2;
}

message ResponseHeader {
  bytes nodeID = 1;
}

message Response {
  ResponseHeader header = 1;
  bytes txid = 2;
  bool status = 3;
}

message ResponseEnvelope {
  Response data = 1;
  bytes signature = 2;
}

message ValidationInfo {
    Flag flag = 1;
}

enum Flag {
    VALID = 0;
    INVALID_MVCC_CONFLICT = 1;
    INVALID_DB_NOT_EXIST = 2;
    INVALID_NO_PERMISSION = 3;
}
